# mkdocstrings-python-xref

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  doc-env.yml  environment.yml  github-condarc.yml  mkdocs.yml  mypy.ini  pyproject.toml  runtime-env.yml  test-env.yml  tox.ini  versions.json
.github/workflows/: main.yml
1.16.2/: 404.html  index.html  sitemap.xml
1.16.2/changelog/: index.html
1.16.2/config/: index.html
1.16.2/install/: index.html
1.16.2/license/: index.html
1.16.2/search/: search_index.json
1.16.2/support/: index.html
1.16.3/: 404.html  index.html  sitemap.xml
1.16.3/changelog/: index.html
1.16.3/config/: index.html
1.16.3/install/: index.html
1.16.3/license/: index.html
1.16.3/search/: search_index.json
1.16.3/support/: index.html
1.5.3/: 404.html  index.html  sitemap.xml
1.5.3/changelog/: index.html
1.5.3/config/: index.html
1.5.3/install/: index.html
1.5.3/license/: index.html
1.5.3/relative-crossref/: index.html
1.5.3/search/: search_index.json
1.5.3/support/: index.html
1.6.0/: 404.html  index.html  objects.inv  sitemap.xml
1.6.0/changelog/: index.html
1.6.0/config/: index.html
1.6.0/install/: index.html
1.6.0/license/: index.html
1.6.0/search/: search_index.json
1.6.0/support/: index.html
conda.recipe/: meta.yaml
docs/: config.md  index.md  install.md  relative-crossref.md  support.md
latest/: 404.html  index.html
latest/changelog/: index.html
latest/config/: index.html
latest/install/: index.html
latest/license/: index.html
latest/relative-crossref/: index.html
latest/support/: index.html
src/: MANIFEST.in  runtime-env.yml  setup.py  test-env.yml
src/mkdocstrings_handlers/garpy_python/: VERSION  __init__.py  crossref.py  handler.py
src/mkdocstrings_handlers/python_xref/: VERSION  __init__.py  crossref.py  handler.py
tests/: test_crossref.py  test_handler.py  test_integration.py
tests/project/: mkdocs.yml
tests/project/docs/: bar.md  foo.md  pkg-baz.md  pkg.md
tests/project/src/myproj/: __init__.py  bar.py  foo.py
tests/project/src/myproj/pkg/: __init__.py  baz.py  dataclass.py
