[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocstrings-python-xref"
description = "Enhanced mkdocstrings python handler"
readme = "README.md"
authors = [
    {name = "Christopher Barber", email="Christopher.Barber@analog.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "documentation-tool", "mkdocstrings", "mkdocstrings-handler", "python"
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "mkdocstrings-python >=1.6.2,<2.0"
]

[project.urls]
Repository = "https://github.com/analog-garage/mkdocstrings-python-xref"
Documentation = "https://analog-garage.github.io/mkdocstrings-python-xref/"

[tool.hatch.version]
path = "src/mkdocstrings_handlers/python_xref/VERSION"
pattern = "\\s*(?P<version>[\\w.]*)"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/mkdocstrings_handlers/python_xref/VERSION",
    "src/mkdocstrings_handlers/python_xref/py.typed",
]

[tool.hatch.build.targets.sdist]
packages = [
    "src/mkdocstrings_handlers",
    "src/mkdocstrings_handlers/python_xref",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/mkdocstrings_handlers",
    "src/mkdocstrings_handlers/python_xref",
]

[tool.mypy]
check_untyped_defs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = [
    "src/mkdocstrings_handlers",
    "tests"
    ]
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "bs4"
]
ignore_missing_imports = true

[tool.pylint.main]
jobs = 0
# Minimum Python version to use for version dependent checks.
py-version = "3.8"

[tool.pylint.format]
max-line-length = 110
max-module-lines = 2000

[tool.pylint."messages control"]
disable = [
    "bad-inline-option",
    "c-extension-no-member",
    "consider-using-from-import",
    "deprecated-pragma",
    "disallowed-name",
    "file-ignored",
    "fixme",
    "import-outside-toplevel",
    "invalid-characters-in-docstring",
    "invalid-name",
    "locally-disabled",
    "multiple-statements",
    "no-else-return",
    "raw-checker-failed",
    "superfluous-parens",
    "suppressed-message",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-statements",
    "trailing-newlines",
    "trailing-whitespace",
    "unspecified-encoding",
    "unused-wildcard-import",
    "use-dict-literal",
    "use-symbolic-message-instead",
    "useless-suppression",
    "wrong-import-order",
    "wrong-import-position",
    "wrong-spelling-in-comment",
    "wrong-spelling-in-docstring",
]
