[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocstrings-python-xref"
description = "Enhanced mkdocstrings python handler"
readme = "README.md"
authors = [
    {name = "Christopher Barber", email="Christopher.Barber@analog.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "documentation-tool", "mkdocstrings", "mkdocstrings-handler", "python"
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "mkdocstrings-python >=1.14,<1.16", # BUG: #32
    "griffe >=1.0"
]

[project.urls]
Repository = "https://github.com/analog-garage/mkdocstrings-python-xref"
Documentation = "https://analog-garage.github.io/mkdocstrings-python-xref/"

[tool.hatch.version]
path = "src/mkdocstrings_handlers/python_xref/VERSION"
pattern = "\\s*(?P<version>[\\w.]*)"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/mkdocstrings_handlers/python_xref/VERSION",
    "src/mkdocstrings_handlers/python_xref/py.typed",
]

[tool.hatch.build.targets.sdist]
packages = [
    "src/mkdocstrings_handlers",
#    "src/mkdocstrings_handlers/python_xref",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/mkdocstrings_handlers",
#    "src/mkdocstrings_handlers/python_xref",
]

[tool.mypy]
check_untyped_defs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = [
    "src/mkdocstrings_handlers",
    "tests"
    ]
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "bs4"
]
ignore_missing_imports = true

[tool.ruff.lint]
# TODO add "I" (isort)
# TODO add "RUF"
# TODO add "ARG"
# TODO add "SIM"
# TODO add "S" (bandit)
# TODO add "PT" (pytest style)
# TODO add "CPY101"
select = ["E", "F", "PL", "D", "R", "T10", "EXE"]
ignore = [
    "D105", # missing doc string for dunder methods
    "D200", # one line doc string
    "D202", # blank lines after function docstring
    "D205", # doc on first line
    "D212", # doc on first line
    "D410", # blank line after doc section
    "D411", # blank line before doc section
    "D412", # no blank lines after section header
    "D415", # doc title punctuation
    "E501", # line too long
    "PLC0105", # covariant metatype names
    "PLR0913", # too-many-argument
    "PLR2004", # magic value
    "PT001", # allow @pytest.fixture without parens
    "RET504", # unnecessary assignment to variable before return
    "S101", # use of assert - do we care?
    # TODO: fix the ones below
    "D403", # capitalize first word of doc string
    "D102", # undocumented public method
    "D104", # missing docstring in public package
    "D107", # __init__ docstring
    "D417", # missing argument description
]
preview = true
explicit-preview-rules = true # only preview explicitly selected rules (E.g. CPY001)

[tool.ruff.lint.per-file-ignores]
# Ignore some issues in tests
"tests/**" = [
    "F401", # unused import (pytest fixture)
    "F403", # wildcard import (for fixtures)
    "F405", # defined from star imports (typicallky a pytest fixture)
    "F811", # redefinition of unused (typically a pytest fixture)
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "S", # bandit rules
]

[tool.ruff.lint.pylint]
#max-locals = 30
max-branches = 15
#max-attributes = 30

[tool.ruff.lint.pydocstyle]
convention = "google"

[too.ruff.format]
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pylint.main]
jobs = 0
# Minimum Python version to use for version dependent checks.
py-version = "3.8"

[tool.pylint.format]
max-line-length = 110
max-module-lines = 2000

[tool.pylint."messages control"]
disable = [
    "bad-inline-option",
    "c-extension-no-member",
    "consider-using-from-import",
    "deprecated-pragma",
    "disallowed-name",
    "file-ignored",
    "fixme",
    "import-outside-toplevel",
    "invalid-characters-in-docstring",
    "invalid-name",
    "locally-disabled",
    "multiple-statements",
    "no-else-return",
    "raw-checker-failed",
    "superfluous-parens",
    "suppressed-message",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-statements",
    "trailing-newlines",
    "trailing-whitespace",
    "unspecified-encoding",
    "unused-wildcard-import",
    "use-dict-literal",
    "use-symbolic-message-instead",
    "useless-suppression",
    "wrong-import-order",
    "wrong-import-position",
    "wrong-spelling-in-comment",
    "wrong-spelling-in-docstring",
]
