[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocstrings-python-xref"
description = "Enhanced mkdocstrings python handler"
readme = "README.md"
authors = [
    {name = "Christopher Barber", email="Christopher.Barber@analog.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "documentation-tool", "mkdocstrings", "mkdocstrings-handler", "python"
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "mkdocstrings-python >=1.16.6,<2.0",
    "griffe >=1.0",
]

[project.urls]
Repository = "https://github.com/analog-garage/mkdocstrings-python-xref"
Documentation = "https://analog-garage.github.io/mkdocstrings-python-xref/"

[project.optional-dependencies]
dev = [
    "build >=1.0.0", # python-build on conda
    "hatchling >=1.21",
    "coverage >=7.4.0",
    "pytest >=8.2",
    "pytest-cov >=5.0",
    "mypy >=1.10",
    "ruff >=0.4.10",
    "beautifulsoup4 >=4.12",
    "black >=23.12",
    "mike >=1.1",
    "mkdocs >=1.5.3,<2.0",
    "mkdocs-material >=9.5.4",
    "linkchecker >=10.4",
]

[tool.pixi.workspace]
name = "mkxref-dev"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.dependencies]
# Use conda for these in pixi
mkdocstrings-python ="*"
griffe ="*"
hatchling = "*"
python-build = "*"
coverage ="*"
pytest ="*"
pytest-cov ="*"
mypy ="*"
ruff = "*"
black = "*"
mike = "*"
mkdocs = "*"
mkdocs-material = "*"
linkchecker = "*"
twine = "*"

[tool.pixi.pypi-dependencies]
mkdocstrings-python-xref = { path = ".", editable = true }

[tool.pixi.environments]
default = {features = ["dev"]}

[tool.hatch.version]
path = "src/mkdocstrings_handlers/python_xref/VERSION"
pattern = "\\s*(?P<version>[\\w.]*)"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/mkdocstrings_handlers/python_xref/VERSION",
    "src/mkdocstrings_handlers/python_xref/py.typed",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/mkdocstrings_handlers",
]

[tool.mypy]
check_untyped_defs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = [
    "src/mkdocstrings_handlers",
    "tests"
    ]
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "bs4"
]
ignore_missing_imports = true

[tool.ruff.lint]
# TODO add "I" (isort)
# TODO add "RUF"
# TODO add "ARG"
# TODO add "SIM"
# TODO add "S" (bandit)
# TODO add "PT" (pytest style)
# TODO add "CPY101"
select = ["E", "F", "PL", "D", "R", "T10", "EXE"]
ignore = [
    "D105", # missing doc string for dunder methods
    "D200", # one line doc string
    "D202", # blank lines after function docstring
    "D205", # doc on first line
    "D212", # doc on first line
    "D410", # blank line after doc section
    "D411", # blank line before doc section
    "D412", # no blank lines after section header
    "D415", # doc title punctuation
    "E501", # line too long
    "PLC0105", # covariant metatype names
    "PLR0913", # too-many-argument
    "PLR2004", # magic value
    "PT001", # allow @pytest.fixture without parens
    "RET504", # unnecessary assignment to variable before return
    "S101", # use of assert - do we care?
    # TODO: fix the ones below
    "D403", # capitalize first word of doc string
    "D102", # undocumented public method
    "D104", # missing docstring in public package
    "D107", # __init__ docstring
    "D417", # missing argument description
]
preview = true
explicit-preview-rules = true # only preview explicitly selected rules (E.g. CPY001)

[tool.ruff.lint.per-file-ignores]
# Ignore some issues in tests
"tests/**" = [
    "F401", # unused import (pytest fixture)
    "F403", # wildcard import (for fixtures)
    "F405", # defined from star imports (typicallky a pytest fixture)
    "F811", # redefinition of unused (typically a pytest fixture)
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "S", # bandit rules
]

[tool.ruff.lint.pylint]
#max-locals = 30
max-branches = 15
#max-attributes = 30

[tool.ruff.lint.pydocstyle]
convention = "google"

[too.ruff.format]
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pylint.main]
jobs = 0
# Minimum Python version to use for version dependent checks.
py-version = "3.8"

[tool.pylint.format]
max-line-length = 110
max-module-lines = 2000

[tool.pylint."messages control"]
disable = [
    "bad-inline-option",
    "c-extension-no-member",
    "consider-using-from-import",
    "deprecated-pragma",
    "disallowed-name",
    "file-ignored",
    "fixme",
    "import-outside-toplevel",
    "invalid-characters-in-docstring",
    "invalid-name",
    "locally-disabled",
    "multiple-statements",
    "no-else-return",
    "raw-checker-failed",
    "superfluous-parens",
    "suppressed-message",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-statements",
    "trailing-newlines",
    "trailing-whitespace",
    "unspecified-encoding",
    "unused-wildcard-import",
    "use-dict-literal",
    "use-symbolic-message-instead",
    "useless-suppression",
    "wrong-import-order",
    "wrong-import-position",
    "wrong-spelling-in-comment",
    "wrong-spelling-in-docstring",
]

[tool.pixi.tasks]
# linting tasks
[tool.pixi.tasks.mypy]
description = "Run mypy type checking"
cmd = "mypy"

[tool.pixi.tasks.ruff]
description = "Run ruff linting on source code and tests"
cmd = "ruff check src/mkdocstrings_handlers tests"

[tool.pixi.tasks.lint]
description = "Run all linting tasks (ruff and mypy)"
depends-on = ["ruff", "mypy"]

# testing tasks
[tool.pixi.tasks.pytest]
description = "Run pytest with verbose output"
cmd = "pytest -sv -ra tests"

[tool.pixi.tasks.test]
description = "Run tests and linting"
depends-on = ["pytest", "lint"]

[tool.pixi.tasks.coverage]
description = "Run tests with coverage reporting"
cmd = "pytest -ra --cov --cov-report=html --cov-report=term -- tests"

[tool.pixi.tasks.coverage-show]
description = "Open coverage report in web browser"
cmd = "python -m webbrowser file://$PIXI_PROJECT_ROOT/htmlcov/index.html"

# doc tasks
[tool.pixi.tasks.docs]
description = "Build documentation"
depends-on = ["doc"]

[tool.pixi.tasks.show-doc]
description = "Serve documentation locally with live reload"
cmd = "mkdocs serve -f mkdocs.yml"

[tool.pixi.tasks.show-docs]
description = "Serve documentation locally (alias for show-doc)"
depends-on = ["show-doc"]

# cleanup tasks
[tool.pixi.tasks.clean-build]
description = "Remove build and distribution artifacts"
cmd = "rm -rf build dist"

[tool.pixi.tasks.clean-coverage]
description = "Remove coverage reports and cache files"
cmd = "rm -rf .coverage .coverage.* htmlcov"

[tool.pixi.tasks.clean-docs]
description = "Remove generated documentation site"
cmd = "rm -rf site"

[tool.pixi.tasks.clean-test]
description = "Remove test and linting cache directories"
cmd = "rm -rf .pytest_cache .mypy_cache .ruff_cache"

[tool.pixi.tasks.clean]
description = "Remove all build, coverage, and test artifacts"
depends-on = ["clean-build", "clean-coverage", "clean-test"]

# build tasks
[tool.pixi.tasks.build]
description = "Build all package formats (wheel, sdist, conda)"
depends-on = ["build-wheel", "build-sdist", "build-conda"]

[tool.pixi.tasks.build-wheel]
env = {VERSION = "$(cat src/mkdocstrings_handlers/python_xref/VERSION)"}
cmd = "pip wheel . --no-deps --no-build-isolation -w dist"
inputs = ["pyproject.toml", "LICENSE.md", "src/**/*"]
outputs = ["dist/mkdocstrings_python_xref-$VERSION-py3-none-any.whl"]

[tool.pixi.tasks.build-sdist]
cmd = "python -m build --sdist --no-isolation --outdir dist"
inputs = ["pyproject.toml", "LICENSE.md", "src/**/*"]
outputs = ["dist/mkdocstrings_python_xref-*.tar.gz"]

[tool.pixi.tasks.build-conda]
description = "Build conda package from wheel"
env = {VERSION = "$(cat src/mkdocstrings_handlers/python_xref/VERSION)"}
cmd = "whl2conda convert dist/mkdocstrings_python_xref-$VERSION-py3-none-any.whl -w dist --overwrite"
depends-on = ["build-wheel"]
inputs = ["dist/mkdocstrings_python_xref-*-none-any.whl"]

# upload tasks
[tool.pixi.tasks.check-upload-wheel]
description = "Check wheel package for upload readiness using twine"
cmd = "twine check dist/*.whl"
depends-on = ["build-wheel"]

[tool.pixi.tasks.check-upload-sdist]
description = "Check source distribution for upload readiness using twine"
cmd = "twine check dist/*.tar.gz"
depends-on = ["build-sdist"]

[tool.pixi.tasks.check-upload]
description = "Check all packages for upload readiness"
depends-on = ["check-upload-sdist", "check-upload-wheel"]

[tool.pixi.tasks.upload-wheel]
description = "Upload wheel package to PyPI (skips existing versions)"
cmd = "twine upload --skip-existing dist/*.whl"
depends-on = ["check-upload-wheel"]

[tool.pixi.tasks.upload-sdist]
description = "Upload source distribution to PyPI (skips existing versions)"
cmd = "twine upload --skip-existing dist/*.tar.gz"
depends-on = ["check-upload-sdist"]

[tool.pixi.tasks.upload]
description = "Upload all packages to PyPI"
depends-on = ["upload-sdist", "upload-wheel"]

[tool.pixi.tasks.doc]
description = "Build documentation site"
cmd = "mkdocs build -f mkdocs.yml"
inputs = ["docs/*.md", "docs/*.svg", "mkdocs.yml"]
outputs = ["site/*.html"]

[tool.pixi.tasks.doc-strict]
description = "Build documentation and check for broken links"
cmd = "linkchecker site"
depends-on = ["doc"]
inputs = ["site/**"]

[tool.pixi.tasks.showdoc]
description = "Serve documentation locally (alias for show-doc)"
cmd = "mkdocs serve -f mkdocs.yml"

[tool.pixi.tasks.doc-serve-all]
description = "Serve all documentation versions using mike"
cmd = "mike serve -F mkdocs.yml"

[tool.pixi.tasks.doc-deploy]
env = {VERSION = "$(cat src/mkdocstrings_handlers/python_xref/VERSION)"}
description = "Deploy the current version to the gh-pages branch"
cmd = "mike deploy -F mkdocs.yml -u $VERSION latest & mike set-default -u $VERSION latest"

[tool.pixi.tasks.show-version]
env = {VERSION = "$(cat src/mkdocstrings_handlers/python_xref/VERSION)"}
cmd = "echo $VERSION"
